force-app/main/default/objects/Stop__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Service__r.Address__c + &apos; &apos; + Service__r.City__c  + &apos; &apos; + Service__r.State__c + &apos; &apos; + Service__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>