force-app/main/default/objects/Stop__c/fields/ExtraTime__c.field-meta.xml
<CustomField>
    <fullName>ExtraTime__c</fullName>
    <label>Extra Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>