force-app/main/default/objects/Stop__c/fields/Marker_Color__c.field-meta.xml
<CustomField>
    <fullName>Marker_Color__c</fullName>
    <defaultValue>&quot;red&quot;</defaultValue>
    <inlineHelpText>For example blue, red or yellow.</inlineHelpText>
    <label>Marker Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>