force-app/main/default/objects/Stop__c/fields/NumberOfItems__c.field-meta.xml
<CustomField>
    <fullName>NumberOfItems__c</fullName>
    <formula>Service__r.Total_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>