force-app/main/default/objects/Stop__c/fields/Service_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Service_Balance_Due__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>