force-app/main/default/objects/Stop__c/fields/ServiceRecordType__c.field-meta.xml
<CustomField>
    <fullName>ServiceRecordType__c</fullName>
    <formula>Service__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>