force-app/main/default/objects/Stop__c/fields/ServiceRelatedId__c.field-meta.xml
<CustomField>
    <fullName>ServiceRelatedId__c</fullName>
    <label>ServiceRelatedId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>