force-app/main/default/objects/Stop__c/fields/ServiceSubType__c.field-meta.xml
<CustomField>
    <fullName>ServiceSubType__c</fullName>
    <formula>TEXT(Service__r.SubType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubType</label>
    <type>Text</type>
</CustomField>