force-app/main/default/objects/Stop__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <formula>Service__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>