force-app/main/default/objects/Stop__c/fields/StopComplete__c.field-meta.xml
<CustomField>
    <fullName>StopComplete__c</fullName>
    <label>Stop Complete</label>
    <type>DateTime</type>
</CustomField>