force-app/main/default/objects/Stop__c/fields/StopNotes__c.field-meta.xml
<CustomField>
    <fullName>StopNotes__c</fullName>
    <label>Stop Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>