force-app/main/default/objects/Stop__c/fields/StopOrder__c.field-meta.xml
<CustomField>
    <fullName>StopOrder__c</fullName>
    <label>Stop order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>