force-app/main/default/objects/Stop__c/fields/StopStartedMessage__c.field-meta.xml
<CustomField>
    <fullName>StopStartedMessage__c</fullName>
    <label>Stop Started Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>