force-app/main/default/objects/Stop__c/fields/StopTime__c.field-meta.xml
<CustomField>
    <fullName>StopTime__c</fullName>
    <label>Stop Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>