force-app/main/default/objects/Stop__c/fields/TotalTime__c.field-meta.xml
<CustomField>
    <fullName>TotalTime__c</fullName>
    <formula>StopTime__c + ExtraTime__c + TravelTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>