force-app/main/default/objects/Stop__c/fields/TravelTime__c.field-meta.xml
<CustomField>
    <fullName>TravelTime__c</fullName>
    <label>Travel Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>