force-app/main/default/objects/Stop__c/fields/TripStartedMessage__c.field-meta.xml
<CustomField>
    <fullName>TripStartedMessage__c</fullName>
    <label>Trip Started Message</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>