force-app/main/default/objects/Stop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Customer__c</columns>
    <columns>NAME</columns>
    <columns>StopOrder__c</columns>
    <columns>Trip__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>